--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Font Awesome for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -25,9 +29,8 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#p  rojects">Project</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Project</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-
                 </ul>
             </div>
         </div>
@@ -66,6 +69,7 @@
             </p>
         </div>
     </section>
+
     <!-- Projects Section -->
     <section id="projects" class="bg-white py-5">
         <div class="container text-center">
@@ -74,59 +78,92 @@
                 <!-- Project 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <img src="Screenshot 2025-05-06 092437.png" class="card-img-top" alt="Project 1" />
-                        <div class="card-body">
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                     <!-- Project 2 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="Screenshot 2025-05-06 092437.png" class="card-img-top" alt="Project 2" />
-                        <div class="card-body">
-                            <a href="" class="btn btn-outline-primary btn-sm">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                     <!-- Project 3 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="Screenshot 2025-05-06 092437.png" class="card-img-top" alt="Project 3" />
+                        <img src="Screenshot 2025-05-06 092437.png" class="card-img-top project-img" alt="Project 1" />
                         <div class="card-body">
                             <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
                         </div>
                     </div>
                 </div>
 
-
-
-                <!-- Contact Section -->
-                <section id="contact" class="bg-light text-center py-5">
-                    <div class="container">
-                        <h2 class="mb-4">Contact</h2>
-                        <p class="mb-4">Feel free to reach out!</p>
-                        <form class="row justify-content-center">
-                            <div class="col-12 col-md-6 p-3">
-                                <input type="text" class="form-control mb-3" placeholder="Your Name" required />
-                                <input type="email" class="form-control mb-3" placeholder="Your Email" required />
-                                <textarea class="form-control mb-3" rows="4" placeholder="Your Message..."
-                                    required></textarea>
-                                <button type="submit" class="btn btn-primary w-100">Send</button>
-                            </div>
-                        </form>
+                <!-- Project 2 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 shadow-sm">
+                        <img src="screen.png" class="card-img-top project-img" alt="Project 2" />
+                        <div class="card-body">
+                            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
+                        </div>
                     </div>
-                </section>
+                </div>
 
-                <!-- Footer -->
-                <footer class="bg-dark text-white text-center py-3">
-                    &copy; All rights reserved.
-                </footer>
+                <!-- Project 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 shadow-sm">
+                        <img src="port.png" class="card-img-top project-img" alt="Project 3" />
+                        <div class="card-body">
+                            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                <!-- Bootstrap Bundle JS -->
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-                <!-- Custom JS -->
-                <script src="style.js"></script>
+    <!-- Contact Section -->
+    <section id="contact" class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Contact Me</h2>
+            <form method="POST" id="form" class="mx-auto" style="max-width: 600px;">
+                <input type="hidden" name="access_key" value="0fd66a7d-fdd9-4c06-a59c-8746d5e539bc">
+
+                <div class="mb-3">
+                    <label for="name" class="form-label">Full Name</label>
+                    <input type="text" name="name" class="form-control" id="name" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" name="email" class="form-control" id="email" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" name="message" id="message" rows="3" required></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100">Submit</button>
+            </form>
+            <div id="result" class="text-center mt-3"></div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-1">
+        <div class="container d-flex flex-column justify-content-center align-items-center h-100">
+            <div class="d-flex justify-content-center gap-4 mb-3">
+                <a href="https://www.instagram.com/sallllmaaaaan" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://t.me/Salmann1113" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-telegram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/salman-n-a5792a361/" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://x.com/zealestoree" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-x-twitter"></i>
+                </a>
+                <a href="https://github.com/salman-113" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+            <p class="mb-0">&copy; 2025 Mr Salman. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- External JS -->
+    <script src="script.js"></script>
 </body>
 
 </html>
