--- a/index.html
+++ b/index.html
@@ -2,168 +2,212 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Salman.com</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Salman.com</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Font Awesome for social icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <!-- Font Awesome for social icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css" />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Mr Salman</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Project</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Mr Salman</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Project</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="home" class="hero text-white text-center text-md-start d-flex align-items-center">
+    <div class="container py-5">
+      <div class="row align-items-center">
+        <div class="col-12 col-md-6 mb-4 mb-md-0 text-center">
+          <div class="image-container mx-auto">
+            <img src="myimage.jpg" class="profile-img" alt="Profile Image of Salman" />
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <h1 class="display-4">Hello, I'm Salman</h1>
+          <p class="lead">Web Developer | Designer | Coder</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="bg-light text-center py-5">
+    <div class="container about-hover">
+      <h2 class="mb-4">About Me</h2>
+      <p class="aboutsic">
+        I’m Muhammed Salman Faris, a dedicated learner currently advancing my coding skills at Bridgeon
+        Solutions after completing my Plus Two education.
+        With solid knowledge of HTML, CSS, and JavaScript, I bring a unique blend of technical expertise and
+        creative experience.
+        Before diving into programming, I worked as a video editor, honing my skills in video creation and photo
+        editing.
+        Passionate about innovation and problem-solving, I am committed to growing as a developer and
+        contributing meaningful projects to the digital world.
+      </p>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="bg-white py-5">
+    <div class="container text-center">
+      <h2 class="mb-4">Projects</h2>
+      <div class="row justify-content-center">
+        <!-- Project 1 -->
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <img src="Screenshot 2025-05-06 092437.png" class="card-img-top project-img" alt="Project 1" />
+            <div class="card-body">
+              <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
             </div>
+          </div>
         </div>
-    </nav>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero text-white text-center text-md-start d-flex align-items-center">
-        <div class="container py-5">
-            <div class="row align-items-center">
-                <div class="col-12 col-md-6 mb-4 mb-md-0 text-center">
-                    <div class="image-container mx-auto">
-                        <img src="myimage.jpg" class="profile-img" alt="Profile Image of Salman" />
-                    </div>
-                </div>
-                <div class="col-12 col-md-6">
-                    <h1 class="display-4">Hello, I'm Salman</h1>
-                    <p class="lead">Web Developer | Designer | Coder</p>
-                </div>
+        <!-- Project 2 -->
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <img src="screen.png" class="card-img-top project-img" alt="Project 2" />
+            <div class="card-body">
+              <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
             </div>
+          </div>
         </div>
-    </section>
 
-    <!-- About Section -->
-    <section id="about" class="bg-light text-center py-5">
-        <div class="container about-hover">
-            <h2 class="mb-4">About Me</h2>
-            <p class="aboutsic">
-                I’m Muhammed Salman Faris, a dedicated learner currently advancing my coding skills at Bridgeon
-                Solutions after completing my Plus Two education.
-                With solid knowledge of HTML, CSS, and JavaScript, I bring a unique blend of technical expertise and
-                creative experience.
-                Before diving into programming, I worked as a video editor, honing my skills in video creation and photo
-                editing.
-                Passionate about innovation and problem-solving, I am committed to growing as a developer and
-                contributing meaningful projects to the digital world.
-            </p>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="bg-white py-5">
-        <div class="container text-center">
-            <h2 class="mb-4">Projects</h2>
-            <div class="row justify-content-center">
-                <!-- Project 1 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="Screenshot 2025-05-06 092437.png" class="card-img-top project-img" alt="Project 1" />
-                        <div class="card-body">
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 2 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="screen.png" class="card-img-top project-img" alt="Project 2" />
-                        <div class="card-body">
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 3 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="port.png" class="card-img-top project-img" alt="Project 3" />
-                        <div class="card-body">
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
-                        </div>
-                    </div>
-                </div>
+        <!-- Project 3 -->
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <img src="port.png" class="card-img-top project-img" alt="Project 3" />
+            <div class="card-body">
+              <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
             </div>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Contact Me</h2>
-            <form method="POST" id="form" class="mx-auto" style="max-width: 600px;">
-                <input type="hidden" name="access_key" value="0fd66a7d-fdd9-4c06-a59c-8746d5e539bc">
+  <!-- Contact Section -->
+  <section id="contact" class="bg-light py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Contact Me</h2>
+      <form method="POST" id="form" class="mx-auto" style="max-width: 600px;">
+        <input type="hidden" name="access_key" value="0fd66a7d-fdd9-4c06-a59c-8746d5e539bc" />
+        <input type="hidden" name="from_name" value="Salman.com Portfolio Contact" />
+        <input type="hidden" name="subject" value="New message from portfolio contact form" />
 
-                <div class="mb-3">
-                    <label for="name" class="form-label">Full Name</label>
-                    <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" name="email" class="form-control" id="email" required>
-                </div>
-
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" name="message" id="message" rows="3" required></textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary w-100">Submit</button>
-            </form>
-            <div id="result" class="text-center mt-3"></div>
+        <div class="mb-3">
+          <label for="name" class="form-label">Full Name</label>
+          <input type="text" name="name" class="form-control" id="name" required />
         </div>
-    </section>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-1">
-        <div class="container d-flex flex-column justify-content-center align-items-center h-100">
-            <div class="d-flex justify-content-center gap-4 mb-3">
-                <a href="https://www.instagram.com/sallllmaaaaan" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://t.me/Salmann1113" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-telegram"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/salman-n-a5792a361/" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="https://x.com/zealestoree" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-x-twitter"></i>
-                </a>
-                <a href="https://github.com/salman-113" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-            <p class="mb-0">&copy; 2025 Mr Salman. All rights reserved.</p>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" name="email" class="form-control" id="email" required />
         </div>
-    </footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- External JS -->
-    <script src="script.js"></script>
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea class="form-control" name="message" id="message" rows="3" required></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Submit</button>
+      </form>
+      <div id="result" class="text-center mt-3"></div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-1">
+    <div class="container d-flex flex-column justify-content-center align-items-center h-100">
+      <div class="d-flex justify-content-center gap-4 mb-3">
+        <a href="https://www.instagram.com/sallllmaaaaan" target="_blank" class="text-white fs-4">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://t.me/Salmann1113" target="_blank" class="text-white fs-4">
+          <i class="fab fa-telegram"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/salman-n-a5792a361/" target="_blank" class="text-white fs-4">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://x.com/zealestoree" target="_blank" class="text-white fs-4">
+          <i class="fab fa-x-twitter"></i>
+        </a>
+        <a href="https://github.com/salman-113" target="_blank" class="text-white fs-4">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+      <p class="mb-0">&copy; 2025 Mr Salman. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Web3Forms JS -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById("form");
+      const result = document.getElementById("result");
+
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const formData = new FormData(form);
+        const object = Object.fromEntries(formData);
+        const json = JSON.stringify(object);
+
+        result.innerHTML = "Sending...";
+
+        fetch("https://api.web3forms.com/submit", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            Accept: "application/json",
+          },
+          body: json,
+        })
+          .then(async (response) => {
+            const json = await response.json();
+            if (json.success) {
+              result.innerHTML = "✅ Message sent successfully!";
+            } else {
+              result.innerHTML = "❌ Error: " + (json.message || "Submission failed.");
+            }
+          })
+          .catch(() => {
+            result.innerHTML = "❌ Something went wrong!";
+          })
+          .finally(() => {
+            form.reset();
+            setTimeout(() => {
+              result.innerHTML = "";
+            }, 4000);
+          });
+      });
+    });
+  </script>
 </body>
 
 </html>
