Your commit message

--- a/index.html
+++ b/index.html
@@ -1017,9 +1017,9 @@
       </div>
       <div class="projects-grid">
         <div class="project-card fade-in">
-          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=400&h=250&fit=crop" class="project-img" alt="Project 1" />
+          <img src="Screenshot 2025-05-06 092437.png" class="project-img" alt="Project 1" />
           <div class="project-content">
-            <h4 class="project-title">E-Commerce Platform</h4>
+            <h4 class="project-title">LinkedIn clone </h4>
             <p class="project-desc">A modern e-commerce solution built with responsive design and interactive features.</p>
             <a href="#" class="project-btn">
               View Project <i class="fas fa-external-link-alt"></i>
@@ -1028,10 +1028,9 @@
         </div>
         
         <div class="project-card fade-in">
-          <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=400&h=250&fit=crop" class="project-img" alt="Project 2" />
+          <img src="screen.png" class="project-img" alt="Project 2" />
           <div class="project-content">
             <h4 class="project-title">Portfolio Website</h4>
-            <p class="project-desc">A creative portfolio showcasing modern web development techniques and animations.</p>
             <a href="#" class="project-btn">
               View Project <i class="fas fa-external-link-alt"></i>
             </a>
@@ -1039,10 +1038,10 @@
         </div>
         
         <div class="project-card fade-in">
-          <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=400&h=250&fit=crop" class="project-img" alt="Project 3" />
+          <img src="port.png" class="project-img" alt="Project 3" />
           <div class="project-content">
-            <h4 class="project-title">Business Dashboard</h4>
-            <p class="project-desc">An interactive dashboard with data visualization and real-time updates.</p>
+            <h4 class="project-title">My first potfolio</h4>
+            <p class="project-desc">A creative portfolio showcasing modern web development techniques and animations.</p>
             <a href="#" class="project-btn">
               View Project <i class="fas fa-external-link-alt"></i>
             </a>
